--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@types/owl.carousel": "^2.3.3",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.7.0",
+    "ngx-slick-carousel": "^15.0.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -28,6 +33,7 @@
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
